# wikipedia_parser

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  compile_commands.json
.cache/clangd/index/: main.cpp.65EAE29B3D7F154A.idx
build2/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
build2/libs/lexbor/: Makefile  cmake_install.cmake  liblexbor.so.2
include/: init_curl.h  thread_safe_queue.h
src/: main.cpp
